# danswer

.github/workflows/: docker-build-push-backend-container-on-tag.yml  docker-build-push-cloud-web-container-on-tag.yml  docker-build-push-model-server-container-on-tag.yml  docker-build-push-web-container-on-tag.yml  docker-tag-latest.yml  pr-chromatic-tests.yml  pr-helm-chart-testing.yml  pr-python-model-tests.yml  pr-python-tests.yml  pr-quality-checks.yml  tag-nightly.yml
backend/: README.md  dtags.json  extracted_res.json  full_chat.json  pyproject.toml  supervisord.conf
backend/model_server/: pyproject.toml
backend/notebooks/: notion_tests.ipynb  tag_groups.json
backend/onyx/chat/stream_processing/: quotes_processing.py
backend/onyx/connectors/notion/: connector.py
backend/onyx/file_processing/: extract_file_text.py
backend/onyx/onyxbot/openai_compliant_adapter/: main.py  pipeline.py  test.py
backend/onyx/onyxbot/telegram/: listener.py
backend/onyx/secondary_llm_flows/: query_expansion.py
backend/onyx/server/: auth_check.py
backend/onyx/server/query_and_chat/: query_backend.py
backend/onyx/tools/tool_implementations/search/: search_tool.py
backend/requirements/: default.txt  model_server.txt
backend/shared_configs/: configs.py
backend/tests/regression/answer_quality/: eval_direct_qa.py  exil_solidaire_output.yaml  regression_results.txt
deployment/docker_compose/: docker-compose.dev.yml  docker-compose.minimal.yml
web/: package.json
web/src/app/admin/assistants/: AssistantEditor.tsx  interfaces.ts  lib.ts
web/src/lib/: userSS.ts
