[project]
name = "model-server"
version = "0.1.0"
description = "Add your description here"
authors = []
dependencies = [
    "einops==0.8.0",
    "cohere==5.6.1",
    "fastapi==0.109.2",
    "google-cloud-aiplatform==1.58.0",
    "numpy==1.26.4",
    "openai==1.55.3",
    "pydantic==2.8.2",
    "retry==0.9.2",
    "safetensors==0.4.2",
    "sentence-transformers==2.6.1",
    "torch==2.2.0",
    "transformers==4.39.2",
    "uvicorn==0.21.1",
    "voyageai==0.2.3",
    "litellm==1.55.4",
    "sentry-sdk[fastapi,celery,starlette]==2.14.0",
    "python-dotenv==1.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
model_server = { cmd = "uvicorn main:app --reload --port 9000" }